--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-streamlit==1.32.0
-langchain==0.1.20
-langchain-community==0.0.38
-langchain-groq==0.1.3
-langchain-text-splitters==0.0.1
-chromadb==0.4.24
-pypdf==4.1.0
-sentence-transformers==2.5.1
-python-dotenv==1.0.1
-groq==0.4.2
+streamlit
+langchain-community==0.2.16
+langchain-groq==0.1.9
+langchain-text-splitters==0.2.4
+chromadb==0.5.3
+pypdf
+sentence-transformers
+python-dotenv
+groq
